--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,6 +7,7 @@ set(VECTOR_DIR srcs/vector)
 
 set(Sources
 	${VECTOR_DIR}/TVector_Constructor.cpp
+	${VECTOR_DIR}/TVector_Iterator.cpp
 )
 
 add_executable(${This} ${Sources})
