--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,7 @@ set(VECTOR_DIR srcs/vector)
 set(Sources
 	${VECTOR_DIR}/TVector_Constructor.cpp
 	${VECTOR_DIR}/TVector_Iterator.cpp
+	${VECTOR_DIR}/TVector_Capacity.cpp
 )
 
 add_executable(${This} ${Sources})
