added --reconfigure option in setup script

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,7 +14,7 @@ set(Sources
 	${VECTOR_DIR}/TVector_Modifiers.cpp
 
 	${LIST_DIR}/TList_Constructor.cpp
-	${LIST_DIR}/TList_Iterators.cpp
+	# ${LIST_DIR}/TList_Iterators.cpp
 )
 
 add_executable(${This} ${Sources})
