--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
+		"Makefile": "c",
 		"any": "cpp",
 		"array": "cpp",
 		"atomic": "cpp",
@@ -76,6 +77,7 @@
 		"ios": "cpp",
 		"locale": "cpp",
 		"mutex": "cpp",
-		"stack": "cpp"
+		"stack": "cpp",
+		"typeindex": "cpp"
 	}
 }
