--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,18 +11,21 @@ set(LIST_DIR srcs/list)
 set(Sources
 	${LIB_DIR}/container_macros.hpp
 
+	${VECTOR_DIR}/TVector_Constructor.cpp
+	${VECTOR_DIR}/TVector_Iterator.cpp
+	${VECTOR_DIR}/TVector_Capacity.cpp
+	${VECTOR_DIR}/TVector_Operator.cpp
+	${VECTOR_DIR}/TVector_Modifiers.cpp
+	${VECTOR_DIR}/TVector_NonMembers.cpp
+
 	${LIST_DIR}/TList_Constructor.cpp
 	${LIST_DIR}/TList_Iterators.cpp
 	${LIST_DIR}/TList_Capacity.cpp
 	${LIST_DIR}/TList_ElementAccess.cpp
 	${LIST_DIR}/TList_Modifiers.cpp
 	${LIST_DIR}/TList_Operators.cpp
+	${LIST_DIR}/TList_NonMembers.cpp
 
-	# ${VECTOR_DIR}/TVector_Constructor.cpp
-	# ${VECTOR_DIR}/TVector_Iterator.cpp
-	# ${VECTOR_DIR}/TVector_Capacity.cpp
-	# ${VECTOR_DIR}/TVector_Operator.cpp
-	# ${VECTOR_DIR}/TVector_Modifiers.cpp
 
 )
 
