map.find (not tested)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -34,6 +34,7 @@ set(Sources
 	${MAP_DIR}/TMap_Constructors.cpp
 	${MAP_DIR}/TMap_Modifiers.cpp
 	${MAP_DIR}/TMap_Iterators.cpp
+	${MAP_DIR}/TMap_Operations.cpp
 )
 
 add_executable(${This} ${Sources})
